# libpath

./: .gitignore  CMakeLists.txt  LICENSE
include/: TrajectoryPoint.h
include/constraints/: CentripitalForceConstraint.h  DifferentialDriveVelocityConstraint.h  IAccelerationalConstraint.h  IIsolatedConstraint.h  RotationalAccelerationConstraint.h  RotationalVelocityConstraint.h  TransationalAccelerationConstraint.h  TranslationalAccelerationConstraint.h  TranslationalVelocityConstraint.h
include/curve/: HermiteCubicCurve.h  HermiteQuinticCurve.h  ICurve.h
include/curve_splitter/: ChordLengthCurveSplitter.h  ICurveSplitter.h
include/profile/: MotionProfile.h  MotionProfileSegment.h
include/trajectory/: TrajectoryPoint.h
include/util/: CSVWriter.h
src/: main.cpp
src/constraints/: RotationalAccelerationConstraint.cpp  TranslationalAccelerationConstraint.cpp
src/curve/: HermiteCubicCurve.cpp  HermiteQuinticCurve.cpp  HermiteQuinticCurve.h  Spline.c  Spline.h
src/curve_splitter/: ChordLengthCurveSplitter.cpp
src/math/: Vector.h
src/profile/: MotionProfile.cpp
src/util/: CSVWriter.cpp
test/: TestConstraints.cpp  TestConstraints.h  TestCurve.cpp  TestCurve.h  TestCurveSplitter.h  plot_curves.gp
test/curves/: hermite_cubic.csv  hermite_quintic.csv
